tweak css folder structure

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <script src="https://js.stripe.com/v3/"></script>
-<link rel="stylesheet" href="w3_css_styles.css">
-<link rel="stylesheet" href="custom_styles.css">
+<link rel="stylesheet" href="./css/w3_css_styles.css">
+<link rel="stylesheet" href="./css/custom_styles.css">
 
 <body>
 
