updates for a min current date plus 7 days window

--- a/client/index.html
+++ b/client/index.html
@@ -420,7 +420,7 @@
                     </div>
 
                     <div class="w3-margin-bottom">
-                        <input class="w3-input" name="datetime" type="date" id="dateAndTimeReq" />
+                        <input class="w3-input" name="datetime" type="date" id="dateReq" min="" required />
                     </div>
 
 
@@ -449,7 +449,7 @@
     <!-- Footer -->
     <footer class="w3-center w3-light-grey w3-padding-32">
         Copyright &copy; | CakeItOrLeaveIt |
-        <span id="dateTime"></span>
+        <span id="year"></span>
     </footer>
     <!-- scripts -->
     <script src="./js/calc.js"></script>
